--- a/waybar/.config/waybar/style.css
+++ b/waybar/.config/waybar/style.css
@@ -1,32 +1,60 @@
+@import "mocha.css";
+
 * {
-  /* `otf-font-awesome` and SpaceMono Nerd Font are required to be installed for icons */
-  font-family: FontAwesome, Roboto, Helvetica, Arial, sans-serif;
-  font-size: 1rem;
-  transition: background-color 0.3s ease-out;
+  font-family: "MesloLGS Nerd Font Mono Bold";
+  font-size: 16px;
+  min-height: 0;
+  font-weight: bold;
 }
 
 window#waybar {
-  background: rgba(0, 0, 0, 0);
-  color: #c0caf5;
-  font-family: FontAwesome, Roboto, Helvetica, Arial, sans-serif;
-  transition: background-color 0.5s;
+  background: transparent;
+  background-color: @crust;
+  color: @overlay0;
+  transition-property: background-color;
+  transition-duration: 0.1s;
+  border-bottom: 1px solid @overlay1;
 }
 
-.modules-left,
-.modules-center,
-.modules-right {
-  background: rgba(0, 0, 8, 0.7);
-  margin: 5px 10px;
-  padding: 0 5px;
-  border-radius: 15px;
-}
-.modules-left {
-  padding: 0;
-}
-.modules-center {
-  padding: 0 10px;
+#window {
+  margin: 8px;
+  padding-left: 8;
+  padding-right: 8;
 }
 
+button {
+  box-shadow: inset 0 -3px transparent;
+  border: none;
+  border-radius: 0;
+}
+
+button:hover {
+  background: inherit;
+  color: @mauve;
+  border-top: 2px solid @mauve;
+}
+
+#workspaces button {
+  padding: 0 4px;
+}
+
+#workspaces button.focused {
+  background-color: rgba(0, 0, 0, 0.3);
+  color: @rosewater;
+  border-top: 2px solid @rosewater;
+}
+
+#workspaces button.active {
+  background-color: rgba(0, 0, 0, 0.3);
+  color: @mauve;
+  border-top: 2px solid @mauve;
+}
+
+#workspaces button.urgent {
+  background-color: #eb4d4b;
+}
+
+#pulseaudio,
 #clock,
 #battery,
 #cpu,
@@ -34,58 +62,81 @@ window#waybar {
 #disk,
 #temperature,
 #backlight,
-#network,
-#pulseaudio,
 #wireplumber,
-#custom-media,
 #tray,
+#network,
 #mode,
-#idle_inhibitor,
-#scratchpad,
-#power-profiles-daemon,
-#language,
-#mpd {
-  padding: 0 10px;
+#scratchpad {
+  margin-top: 2px;
+  margin-bottom: 2px;
+  margin-left: 4px;
+  margin-right: 4px;
+  padding-left: 4px;
+  padding-right: 4px;
+}
+
+#cpu {
+  color: @mauve;
+  border-bottom: 2px solid @mauve;
+}
+
+#memory {
+  color: @yellow;
+  border-bottom: 2px solid @yellow;
+}
+
+#clock {
+  color: @maroon;
+  border-bottom: 2px solid @maroon;
+}
+
+#clock.date {
+  color: @mauve;
+  border-bottom: 2px solid @mauve;
+}
+
+#backlight {
+  color: @red;
+  border-bottom: 2px solid @red;
+}
+
+#pulseaudio {
+  color: @blue;
+  border-bottom: 2px solid @blue;
+}
+
+#network {
+  color: @yellow;
+  border-bottom: 2px solid @yellow;
+}
+
+#idle_inhibitor {
+  margin-right: 12px;
+  color: #7cb342;
+}
+
+#idle_inhibitor.activated {
+  color: @red;
+}
+
+#battery {
+  color: @green;
+  border-bottom: 2px solid @green;
+}
+
+/* If workspaces is the leftmost module, omit left margin */
+.modules-left > widget:first-child > #workspaces {
+  margin-left: 0;
+}
+
+/* If workspaces is the rightmost module, omit right margin */
+.modules-right > widget:last-child > #workspaces {
+  margin-right: 0;
+}
+
+#custom-vpn {
+  color: @lavender;
   border-radius: 15px;
-}
-
-#clock:hover,
-#battery:hover,
-#cpu:hover,
-#memory:hover,
-#disk:hover,
-#temperature:hover,
-#backlight:hover,
-#network:hover,
-#pulseaudio:hover,
-#wireplumber:hover,
-#custom-media:hover,
-#tray:hover,
-#mode:hover,
-#idle_inhibitor:hover,
-#scratchpad:hover,
-#power-profiles-daemon:hover,
-#language:hover,
-#mpd:hover {
-  background: rgba(26, 27, 38, 0.9);
-}
-
-#workspaces button {
-  background: transparent;
-  font-family: FontAwesome, Roboto, Helvetica, Arial, sans-serif;
-  font-weight: 900;
-  font-size: 13pt;
-  color: #c0caf5;
-  border: none;
-  border-radius: 15px;
-}
-
-#workspaces button.active {
-  background: #13131d;
-}
-
-#workspaces button:hover {
-  background: #11111b;
-  color: #cdd6f4;
-  box-shadow: none;
+  padding-left: 6px;
+  padding-right: 6px;
 }
