--- a/wofi/.config/wofi/style.css
+++ b/wofi/.config/wofi/style.css
@@ -52,29 +52,17 @@
 @define-color crust-rgb  rgb(17, 17, 27);
 
 * {
-  font-family: "Inconsolata Nerd Font", monospace;
-  font-size: 14px;
+  font-family: "Hack Nerd Font", monospace;
+  font-size: 1.125rem;
 }
 
 /* Window */
 window {
   margin: 0px;
-  padding: 10px;
-  border: 0.16em solid @lavender;
-  border-radius: 0.1em;
+  padding: 5px;
+  border: 2px solid @lavender;
+  border-radius: 0.5rem;
   background-color: @base;
-  animation: slideIn 0.5s ease-in-out both;
-}
-
-/* Slide In */
-@keyframes slideIn {
-  0% {
-    opacity: 0;
-  }
-
-  100% {
-    opacity: 1;
-  }
 }
 
 /* Inner Box */
@@ -83,18 +71,6 @@ window {
   padding: 10px;
   border: none;
   background-color: @base;
-  animation: fadeIn 0.5s ease-in-out both;
-}
-
-/* Fade In */
-@keyframes fadeIn {
-  0% {
-    opacity: 0;
-  }
-
-  100% {
-    opacity: 1;
-  }
 }
 
 /* Outer Box */
@@ -121,7 +97,6 @@ window {
   border-radius: 0.1em;
   color: @text;
   background-color: @base;
-  animation: fadeIn 0.5s ease-in-out both;
 }
 
 #input image {
@@ -138,7 +113,6 @@ window {
   margin: 5px;
   border: none;
   color: @text;
-  animation: fadeIn 0.5s ease-in-out both;
 }
 
 #entry {
