--- a/waybar/.config/waybar/style.css
+++ b/waybar/.config/waybar/style.css
@@ -1,82 +1,46 @@
+@import "theme.css";
+
 * {
-  border: none;
-  border-radius: 4px;
-  /* `ttf-font-awesome` is required to be installed for icons */
-  font-family: "Hack Nerd Font", Helvetica, Arial, sans-serif;
+  font-family: "Hack Nerd Font Propo", Helvetica, Arial, sans-serif;
   font-weight: bold;
-
-  /* adjust font-size value to your liking: */
-  font-size: 12px;
-
-  min-height: 0;
+  font-size: 12;
 }
 
 window#waybar {
-  background-color: rgba(0, 0, 0, 0.9);
-  /* border-bottom: 3px solid rgba(100, 114, 125, 0.5); */
-  color: #ffffff;
-  /* transition-property: background-color; */
-  /* transition-duration: .5s; */
-  /* border-radius: 0; */
+  background-color: transparent;
 }
-
-/* window#waybar.hidden {
-    opacity: 0.2;
-} */
-
-/*
-window#waybar.empty {
-    background-color: transparent;
-}
-window#waybar.solo {
-    background-color: #FFFFFF;
-}
-*/
-
-/* window#waybar.termite {
-    background-color: #000000;
-}
-
-window#waybar.chromium {
-    background-color: #000000;
-    border: none;
-} */
 
 #taskbar {
-  background-color: #202020;
-  border-radius: 10px;
+  background-color: @crust;
 }
 
+#taskbar,
 #taskbar button {
-  border-radius: 10px;
+  border-radius: 5px;
+}
+
+#taskbar button:hover {
+  background-color: @blue;
 }
 
 #workspaces button {
-  /* padding: 0 0.4em; */
-  /* background-color: transparent; */
-  color: #ffffff;
-  /* Use box-shadow instead of border so the text isn't offset */
-  box-shadow: inset 0 -3px transparent;
+  color: @text;
+  background-color: @crust;
+  margin: 0 2px;
 }
 
 /* https://github.com/Alexays/Waybar/wiki/FAQ#the-workspace-buttons-have-a-strange-hover-effect */
 #workspaces button:hover {
-  background: rgba(0, 0, 0, 0.9);
-  box-shadow: inset 0 -3px #ffffff;
+  background-color: @surface2;
 }
 
-#workspaces button.focused {
-  background-color: #64727d;
-  /* box-shadow: inset 0 -3px #ffffff; */
+#workspaces button.active {
+  background-color: @mauve;
+  color: @crust;
 }
 
 #workspaces button.urgent {
-  background-color: #eb4d4b;
-}
-
-#mode {
-  background-color: #64727d;
-  /* border-bottom: 3px solid #ffffff; */
+  background-color: @red;
 }
 
 #clock,
@@ -89,12 +53,20 @@ window#waybar.chromium {
 #pulseaudio,
 #custom-media,
 #tray,
-#mode,
 #idle_inhibitor,
 #mpd {
-  padding: 0 10px;
-  margin: 6px 3px;
-  color: #000000;
+  padding: 10px;
+  margin: 0 5px;
+  background-color: @crust;
+  color: @text;
+  border-radius: 5px;
+}
+
+#window {
+  color: @yellow;
+  background-color: @crust;
+  padding: 10px;
+  border-radius: 5px;
 }
 
 #window,
@@ -112,132 +84,46 @@ window#waybar.chromium {
   margin-right: 0;
 }
 
-#clock {
-  background-color: #000000;
-  color: white;
-}
-
-#battery {
-  background-color: #000000;
-  color: white;
-}
-
-#battery.charging {
-  color: #ffffff;
-  background-color: #000000;
-}
-
 @keyframes blink {
   to {
-    background-color: #ffffff;
-    color: #000000;
+    background-color: @text;
+    color: @crust;
   }
 }
 
 #battery.critical:not(.charging) {
-  background-color: #f53c3c;
-  color: #ffffff;
   animation-name: blink;
   animation-duration: 0.5s;
   animation-timing-function: linear;
   animation-iteration-count: infinite;
   animation-direction: alternate;
-}
-
-label:focus {
-  background-color: #000000;
-}
-
-#cpu {
-  background-color: #000000;
-  color: #ffffff;
-}
-
-#memory {
-  background-color: #000000;
-  color: white;
-}
-
-#backlight {
-  background-color: #000000;
-  color: white;
-}
-
-#network {
-  background-color: #000000;
-  color: white;
+  background-color: @red;
+  color: @base;
 }
 
 #network.disconnected {
-  background-color: #f53c3c;
-}
-
-#pulseaudio {
-  background-color: #000000;
-  color: #ffffff;
+  background-color: @red;
 }
 
 #pulseaudio.muted {
-  background-color: #000000;
-  color: #ffffff;
-}
-
-#custom-media {
-  background-color: #66cc99;
-  color: #2a5c45;
-  min-width: 100px;
-}
-
-#custom-media.custom-spotify {
-  background-color: #66cc99;
-}
-
-#custom-media.custom-vlc {
-  background-color: #ffa000;
-}
-
-#temperature {
-  background-color: #f0932b;
-}
-
-#temperature.critical {
-  background-color: #eb4d4b;
+  color: @pink;
 }
 
 #tray {
-  background-color: #2980b9;
-}
-
-#idle_inhibitor {
-  background-color: #2d3436;
-}
-
-#idle_inhibitor.activated {
-  background-color: #ecf0f1;
-  color: #2d3436;
-}
-
-#mpd {
-  background-color: #66cc99;
-  color: #2a5c45;
-}
-
-#mpd.disconnected {
-  background-color: #f53c3c;
-}
-
-#mpd.stopped {
-  background-color: #90b1b1;
-}
-
-#mpd.paused {
-  background-color: #51a37a;
-}
-
-#language {
-  background: #bbccdd;
-  color: #333333;
   padding: 0 5px;
-  margin: 6px 3px;
-  min-width: 16px;
+  background-color: @blue;
+  border: 1px solid @teal;
+}
+
+tooltip {
+  border-radius: 10px;
+  transition: all 0.2s ease-in-out;
+  border: 2px solid @levender;
+  background-color: @crust;
+}
+
+tooltip label {
+  padding: 5px 10px;
+  font-weight: bold;
+  color: @teal;
 }
