waybar add style config

--- a/waybar/.config/waybar/style.css
+++ b/waybar/.config/waybar/style.css
@@ -10,6 +10,10 @@ window#waybar {
   background-color: transparent;
 }
 
+window#waybar.empty #window {
+  background-color: transparent;
+}
+
 #taskbar {
   background-color: @crust;
 }
